update package to reflect compatibility with node version

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "dynamodb-doc": "^1.0.0",
     "kerberos": "0.0.19",
     "redis": "^2.6.0-2",
-    "ursa": "^0.9.3"
+    "ursa": "0.9.3"
   }
 }
