--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "async": "^0.9.0",
     "dynamodb-doc": "^1.0.0",
     "kerberos": "0.0.19",
-    "redis": "^2.6.0-2",
-    "ursa": "0.9.3"
+    "redis": "^2.6.0-2"
   }
 }
